getProductById api
